syntax = "proto3";

package stredono;

option go_package="github.com/pkulik0/stredono/cloud/pb";

import 'pb/enums.proto';

enum TipStatus {
  INITIATED = 0;
  PAYMENT_PENDING = 1;
  PAYMENT_SUCCESS = 2;
}

message Tip {
  string SenderId = 1;
  string DisplayName = 2;
  string Email = 3;
  string Message = 4;
  double Amount = 5;
  Currency Currency = 6;
  string RecipientId = 7;
  TipStatus Status = 8;
  int64 Timestamp = 9;
}